# stripe-payments-demo

./: README  app.json  eas.json  metro.config.js
app/: package.json
app/src/: App.tsx
app/src/screens/: Home.tsx  Stripe.tsx
pkg/polosa/: Cargo.toml
scripts/: setup.sh
