[package]
name = "polosa"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
async-stripe = "=0.38.1"
chrono = "0.4.38"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
uuid = "1.10.0"
